Modified start_coasting to handle circular scrolling

Calculate the angle speed when circular scrolling is on and coast based on
that speed instead of the previously used vertical scroll speed.

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=30756

Signed-off-by: Patrick Curran <pjcurran@wisc.edu>
Reviewed-by: Peter Hutterer <peter.hutterer@who-t.net>
Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>